# rust-restaurant-api

./: .gitignore  Cargo.toml  Readme.md  Restaurant API.postman_collection.json
src/: client.rs  config.rs  main.rs
src/api/: create_items.rs  delete_items.rs  helpers.rs  mod.rs  read_item.rs  server.rs  update_items.rs
src/domain/: create_item.rs  delete_item.rs  mod.rs  read_item.rs  read_items.rs  types.rs  update_item.rs
src/repository/: inmemory.rs  mod.rs  sqlite.rs
