[package]
name = "restaurant-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
backtrace = "0.3"
clap = { version = "4.4.10", features = ["color", "derive"] }
futures = "0.3"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
serde_derive = "1.0"
tracing-appender = "0.2"
unicode-segmentation = "1.10.1"
chrono = "0.4"
urlpattern = "0.2.0"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
reqwest = {version = "0.11", features = ["blocking"]}

[dev-dependencies]

pretty_assertions = "0.7"
select = "0.5"
claim = "0.5"
